--- a/Eventify/Views/Shared/_VenueCard.cshtml
+++ b/Eventify/Views/Shared/_VenueCard.cshtml
@@ -4,7 +4,7 @@
     <div class="card h-100 border-0 shadow-sm">
         <div class="position-relative">
             <img src="@Model.Photo" class="card-img-top img-hover" alt="@Model.VenueName">
-            <span class="badge bg-white text-primary position-absolute top-0 start-0 m-3">@Model.Type</span>
+            <span class="badge bg-white text-primary position-absolute top-0 start-0 m-3">@Model.VenueType</span>
             @* <div class="position-absolute top-0 end-0 m-3 bg-white rounded-circle p-2 small"> *@
             @*     <i class="fas fa-star-fill text-warning"></i> 4.9 *@
             @* </div> *@
