--- a/Eventify/Views/Venues/Add.cshtml
+++ b/Eventify/Views/Venues/Add.cshtml
@@ -176,17 +176,8 @@
 
                         <!-- Proof of ownership -->
                         <h6 class="fw-bold mb-3">Proof of ownership</h6>
-                        @* <div class="mb-4"> *@
-                        @*     <div class="upload-area border border-2 border-dashed rounded p-5 text-center mb-3" id="proofUpload" style="background-color: var(--card-bg); cursor: pointer;"> *@
-                        @*         <i class="fas fa-arrow-up fs-1 text-muted mb-3"></i> *@
-                        @*         <h6 class="fw-semibold mb-2">Upload Venue Proof of ownership file</h6> *@
-                        @*         <p class="text-muted small mb-0">Add up to 5 MB file or photo of your venue's proof of ownership</p> *@
-                        @*         <input type="file" class="d-none" id="proofInput" accept="image/*,.pdf"> *@
-                        @*     </div> *@
-                        @*     <div id="proofPreview"></div> *@
-                        @* </div> *@
-                        <div class="col-md-6 mb-3">
-                            <div class="position-relative" id="FrontIdPreviewWrapper" style="width: 100%; height: 180px;">
+                        <div class="col-md-4 mb-3">
+                            <div class="position-relative" id="FrontIdPreviewWrapper" style="width: 100%; height: 480px;">
                                 <!-- Placeholder Upload Box -->
                                 <div class="upload-area border border-2 border-dashed rounded p-4 text-center
                                                 h-100 d-flex flex-column justify-content-center align-items-center"
@@ -227,7 +218,7 @@
                             <button type="submit" class="btn btn-primary">Submit Venue for Review</button>
                             <button type="reset" class="btn btn-outline-primary">Clear Form</button>
                         </div>
-                        @* <small class="text-muted d-block mt-2">We'll review your submission and get back to you within 24 hours.</small> *@
+                        <small class="text-muted d-block mt-2">We'll review your submission and get back to you within 24 hours.</small>
                     </form>
                 </div>
             </div>
