--- a/Eventify/Views/Admin/Index.cshtml
+++ b/Eventify/Views/Admin/Index.cshtml
@@ -113,7 +113,7 @@
                                         @* <button class="btn btn-sm btn-primary">
                                             <i class="fas fa-eye me-1"></i>Review
                                         </button> *@
-                                        <a asp-controller="Profile" asp-action="View" asp-route-id="@user.Id"
+                                        <a asp-controller="Admin" asp-action="ReviewUser" asp-route-id="@user.Id"
                                            class="btn btn-sm btn-primary">
                                             <i class="fas fa-eye me-1"></i> Review
                                         </a>
