--- a/Eventify/Views/Admin/ReviewEvent.cshtml
+++ b/Eventify/Views/Admin/ReviewEvent.cshtml
@@ -139,7 +139,7 @@
                     <div class="card-body p-4 bg-light">
                         <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center">
                             <div>
-                                <h5 class="fw-bold mb-1 text-danger">Verifing Zone</h5>
+                                <h5 class="fw-bold mb-1 text-warning">Verifing Zone</h5>
                                 <p class="text-muted mb-0 small">According to the user information, Choose to verify or decline verifying the user.</p>
                             </div>
                             <div class="text-end">
