--- a/Eventify/Views/Profile/PersonalEventOrganizer.cshtml
+++ b/Eventify/Views/Profile/PersonalEventOrganizer.cshtml
@@ -21,7 +21,7 @@
                         {<span class="text-success">Verified</span>}
                     else if (Model.Verfication == AccountStatus.Declined.ToString())
                          {<span class="text-danger">Declined</span>}
-                    else if (Model.Verfication == AccountStatus.Declined.ToString())
+                    else if (Model.Verfication == AccountStatus.Pending.ToString())
                          {<span class="text-warning">Pending</span>}
                 </p>                
                 <p class="text-muted mb-2">Event Organizer</p>
