--- a/Eventify/Views/Shared/_CantDeleteAccount.cshtml
+++ b/Eventify/Views/Shared/_CantDeleteAccount.cshtml
@@ -15,7 +15,7 @@
 
                         <h2 class="text-danger fw-bold">Can't Delete The Account</h2>
                         <p class="text-muted mt-3">
-                            Some venues cannot be deleted because they have paid events associated with them.
+                           You have some paid events associated with the account.
                         </p>
                     </div>
                 </div>
