--- a/Eventify/Views/Profile/PersonalVenueOwner.cshtml
+++ b/Eventify/Views/Profile/PersonalVenueOwner.cshtml
@@ -26,7 +26,7 @@
                     {
                         <span class="text-danger">Declined</span>
                     }
-                    else if (Model.Verfication == AccountStatus.Declined.ToString())
+                    else if (Model.Verfication == AccountStatus.Pending.ToString())
                     {
                         <span class="text-warning">Pending</span>
                     }
