--- a/Eventify/Views/Events/Add.cshtml
+++ b/Eventify/Views/Events/Add.cshtml
@@ -161,7 +161,7 @@
 
 @if (TempData["Selected Date is Invalid"] != null)
 {
-    @await Html.PartialAsync("_InvalidBookingDate")
+    @await Html.PartialAsync("_InvalidBookingDateAdd")
 }
 
 @section Scripts {
