--- a/Eventify/Views/Profile/PersonalVenueOwner.cshtml
+++ b/Eventify/Views/Profile/PersonalVenueOwner.cshtml
@@ -113,3 +113,8 @@ else if (TempData["WithdrawFailed"] != null)
 {
     @await Html.PartialAsync("_FailedWithdraw")
 }
+
+@if (TempData["Cant'nAddVenueError"] != null)
+{
+    @await Html.PartialAsync("_Cant'nAddVenueErrorMessage");
+}
